@startuml CommandProcessor

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 30

title Diagram Kelas CommandProcessor

class CommandProcessor {
    - engine : GameEngine*
    - turnManager : TurnManager*
    - commandMap : map<string, function<void(vector<string>)>>
    __
    + CommandProcessor(engine : GameEngine*, turnManager : TurnManager*)
    + registerCommands() : void
    + processInput(rawInput : string) : bool
    + getAvailableCommands() : vector<string>
    __
    - parseCommand(input : string) : pair<string, vector<string>>
    - validateCommand(cmd : string, args : vector<string>) : bool
}

class GameEngine <<Engine>> {
    + executeGadai(player) : void
    + executeTebus(player) : void
    + executeBangun(player) : void
    + executeGunakanKemampuan(player) : void
}

class TurnManager <<Engine>> {
    + canRoll(player) : bool
    + canUseSkill(player) : bool
    + canSave() : bool
    + getPhase() : TurnPhase
}

CommandProcessor --> GameEngine : dispatches to >
CommandProcessor --> TurnManager : validates with >


@enduml
